Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.9 - unreleased

	Charles Boening
	- Fix logging in PostgreSQL.
	- Change ENABLE_{MY|PG}SQL_LOGGING to ENABLE_SQL_LOGGING.
	- Replace --enable-{my|pg}sql-logging with --enable-sql-logging
	  in configure options.

	Tom Collins
	- Tweaking of Charles Boening's changes.
	- vchkpw: Fix problem in md5.h causing segfault in SMTP AUTH on 
	  amd64. [964843, 958799]
	- vpopmail.h: Add new error and flag defines from 5.5 series.
	- vchkpw: log webmail connections as 'vchkpw-webmail'.
	- vpopmail.c: fix problem related to sending SIGHUP to qmail-send.
	  Original problem could cause "Signal 1 caught by ps" error.

5.4.8 - released 12-Nov-2004

	Rick Widmer
	- vadddomain: Check for existing domain before prompting for
	  password.
	- vdeldomain: Fix uninitialized variable warning.

	Tom Collins
	- Fix problems with valias code in vmysql.c and vpgsql.c.  Storing
	  aliases in Postgres should work now, and it should fix problems
	  with processing Maildir valias entries in vdelivermail. [985011,
	  1024706, 1033801]
	- Fix bug in vmoddomlimits that wiped out the Domain Quota 
	  when editing default limits.
	- Change columns in Postgres valias table to varchar from char.
	  See README.pgsql for instructions on fixing existing tables.
	- vmoduser: update maildirsize instead of just deleting it when
	  modifying quota.
	- vchkpw: classify POP/IMAP connections from select IPs (defaults
	  to 127.0.0.1) as webmail and check NO_WEBMAIL user flag instead
	  of NO_POP and NO_IMAP.
	- Update qmail-smtpd-auth patch in contrib to latest (0.5.6).
	- Update README.quotas with note about domain quotas not working.
	- vpopmail.c: remove unused sys/varargs.h include.
	- vdominfo: fix broken -a option.
	- vdominfo: better display of real name for alias domains. [981335]
	- vpopmail.c: Improved maildir_to_email() function. [953439]
